2019-12-09  Dmitry Molodenskiy  <dmolodenskiy@embl-hamburg.de>

	* pytools/scale-random.py: New.

2019-12-06  Dmitry Molodenskiy  <dmolodenskiy@embl-hamburg.de>

	* pytools/dat3kratky.py: New.

2019-11-05  Dmitry Molodenskiy  <dmolodenskiy@embl-hamburg.de>

	* pytools/double-fourier.py: Merge fit and data inside the script.

2019-11-05  Dmitry Molodenskiy  <dmolodenskiy@embl-hamburg.de>

	* pytools/double-fourier.py: To sew the smallest angles.

2019-09-10  Dmitry Molodenskiy  <dmolodenskiy@embl-hamburg.de>

	* pytools/copy_from_directory.py: New.
	* pytools/parser.py: New.
	* pytools/read_kdtree.py: New.
